@@ -2483,15 +2483,17 @@ void kill_player(object *op)
   {
     CFParm* CFR;
     int k, l, m;
+    uint32 n;
     k = EVENT_DEATH;
     l = SCRIPT_FIX_ALL;
     m = 0;
+    n = 0;
     CFP.Value[0] = &k;
     CFP.Value[1] = NULL;
     CFP.Value[2] = op;
     CFP.Value[3] = NULL;
     CFP.Value[4] = NULL;
-    CFP.Value[5] = &m;
+    CFP.Value[5] = &n;
     CFP.Value[6] = &m;
     CFP.Value[7] = &m;
     CFP.Value[8] = &l;
